--- a/assets/css/styles_.css
+++ b/assets/css/styles_.css
@@ -6,7 +6,7 @@
  * License: Creative Commons Attribution 3.0 License
  * Website: http://themes.3rdwavemedia.com/
 */
-/* styles-5.css */
+/* styles.css */
 /* ======= Base ======= */
 body {
   font-family: 'Roboto', sans-serif;
@@ -26,7 +26,7 @@ h6 {
   font-weight: 300;
 }
 a {
-  color: #f47c03;
+  color: #2d7788;
   -webkit-transition: all 0.4s ease-in-out;
   -moz-transition: all 0.4s ease-in-out;
   -ms-transition: all 0.4s ease-in-out;
@@ -34,7 +34,7 @@ a {
 }
 a:hover {
   text-decoration: underline;
-  color: #a85502;
+  color: #1a454f;
 }
 a:focus {
   text-decoration: none;
@@ -44,7 +44,7 @@ p {
   text-align: justify;
 }
 .wrapper {
-  background: #FDA246;
+  background: #42A8C0;
   max-width: 960px;
   margin: 0 auto;
   position: relative;
@@ -53,7 +53,7 @@ p {
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
 }
 .sidebar-wrapper {
-  background: #FDA246;
+  background: #42A8C0;
   position: absolute;
   right: 0;
   width: 240px;
@@ -162,7 +162,7 @@ p {
   text-transform: uppercase;
   font-size: 20px;
   font-weight: 500;
-  color: #f47c03;
+  color: #2d7788;
   position: relative;
   margin-top: 0;
   margin-bottom: 20px;
@@ -181,7 +181,7 @@ p {
   -moz-background-clip: padding;
   -webkit-background-clip: padding-box;
   background-clip: padding-box;
-  background: #f47c03;
+  background: #2d7788;
   text-align: center;
   padding-top: 8px;
   font-size: 16px;
@@ -243,7 +243,7 @@ p {
 }
 .skillset .level-bar-inner {
   height: 12px;
-  background: #fec892;
+  background: #7bc2d3;
 }
 .footer {
   padding: 30px;
